--- a/.github/workflows/helloworld.yaml
+++ b/.github/workflows/helloworld.yaml
@@ -7,4 +7,4 @@ jobs:
     name: Hello Worlsd CI/CD Job
     runs-on: ubuntu-latest
     steps:
-     - echo "Hello World CI/CD Job is running"
+     - run: echo "Hello World CI/CD Job is running"
